Fixed misaligned

--- a/sass/layout/_speaker.scss
+++ b/sass/layout/_speaker.scss
@@ -20,7 +20,7 @@
       -webkit-flex-direction: column;
       -ms-flex-direction: column;
       flex-direction: column;
-      width: 50%;
+      width: 49.9%;
     }
   }
 
